hphp/hack/test/typecheck/reified_generics/enforceable_targ_new.php.like_types.exp
File "enforceable_targ_new.php", line 10, characters 7-7:
Some type constraint(s) here are violated (Typing[4110])
File "enforceable_targ_new.php", line 7, characters 27-28:
'Tc' is a constrained type parameter
File "enforceable_targ_new.php", line 7, characters 27-28:
Some type constraint(s) are violated here
File "enforceable_targ_new.php", line 7, characters 27-28:
Tc is a constrained type parameter
File "enforceable_targ_new.php", line 10, characters 9-19:
Expected Erased<int>
File "enforceable_targ_new.php", line 7, characters 27-28:
But got dynamic
File "enforceable_targ_new.php", line 11, characters 7-7:
Some type constraint(s) here are violated (Typing[4110])
File "enforceable_targ_new.php", line 7, characters 27-28:
'Tc' is a constrained type parameter
File "enforceable_targ_new.php", line 7, characters 27-28:
Some type constraint(s) are violated here
File "enforceable_targ_new.php", line 7, characters 27-28:
Tc is a constrained type parameter
File "enforceable_targ_new.php", line 11, characters 9-20:
Expected Reified<int>
File "enforceable_targ_new.php", line 7, characters 27-28:
But got dynamic
File "enforceable_targ_new.php", line 12, characters 7-7:
Some type constraint(s) here are violated (Typing[4110])
File "enforceable_targ_new.php", line 7, characters 27-28:
'Tc' is a constrained type parameter
File "enforceable_targ_new.php", line 7, characters 27-28:
Some type constraint(s) are violated here
File "enforceable_targ_new.php", line 7, characters 27-28:
Tc is a constrained type parameter
File "enforceable_targ_new.php", line 12, characters 9-28:
Expected Reified<Erased<int>>
File "enforceable_targ_new.php", line 7, characters 27-28:
But got dynamic
File "enforceable_targ_new.php", line 10, characters 9-19:
Invalid type (Typing[4302])
File "enforceable_targ_new.php", line 7, characters 27-28:
Type parameter Tc was declared __Enforceable here
File "enforceable_targ_new.php", line 10, characters 9-19:
This type is not enforceable because it has a type with an erased generic type argument
File "enforceable_targ_new.php", line 12, characters 9-28:
Invalid type (Typing[4302])
File "enforceable_targ_new.php", line 7, characters 27-28:
Type parameter Tc was declared __Enforceable here
File "enforceable_targ_new.php", line 12, characters 17-27:
This type is not enforceable because it has a type with an erased generic type argument
